--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <style name="Theme.NFP" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:statusBarColor">#FF8FA797</item>
-    </style>
+    <style name="Theme.NFP" parent="android:Theme.Material.Light.NoActionBar"/>
 </resources>
